Trying to fix para rendering linebreaks in blog

--- a/static/css/post_list.css
+++ b/static/css/post_list.css
@@ -77,7 +77,7 @@ header .header-text {
   margin: 0;
 }
 
-.blogs-rendered .text {
+.blogs-rendered .posts .text {
   display: flex;
   align-items: center;
   justify-content: flex-start;
